--- a/home page.html
+++ b/home page.html
@@ -57,7 +57,7 @@
               <td>To become a software engineer</td>
               </tr>
     </table>
-	  <h2 align="center">Career Objectives:</h2>
+	  <h1 ><i>Career Objectives:</i></h1>
         <p>As a motivated and ambitious student, I am eager to leverage my passion for learning and dedication.
        With a strong academic background and a drive to achieve excellence, I am seeking opportunities to 
        contribute my skills and make a meaningful impact. Through hands-on experiences and a proactive approach,
