--- a/home page.html
+++ b/home page.html
@@ -58,12 +58,13 @@
               </tr>
     </table>
 	  <h1 ><i>Career Objectives:</i></h1>
-        <p>As a motivated and ambitious student, I am eager to leverage my passion for learning and dedication.
+	  <div fontsize="10">
+        <p><i>As a motivated and ambitious student, I am eager to leverage my passion for learning and dedication.
        With a strong academic background and a drive to achieve excellence, I am seeking opportunities to 
        contribute my skills and make a meaningful impact. Through hands-on experiences and a proactive approach,
         I have honed my problem-solving abilities and communication skills, positioning myself as a valuable asset 
         to any team. With a growth mindset and a thirst for knowledge, I am poised to embrace challenges and thrive 
-        in a dynamic, fast-paced environment. Let's collaborate to bring innovation and success to your organization.</p>
+        in a dynamic, fast-paced environment. Let's collaborate to bring innovation and success to your organization.</i></p></div>
   </section>
   <section id="education">
 <div class="column-2a" align="center">
