--- a/home page.html
+++ b/home page.html
@@ -56,6 +56,10 @@
               <td>Future goal:</td>
               <td>To become a software engineer</td>
               </tr>
+	    <tr>
+                <td>Resume:</td>
+                <td><a href="RESUME main.pdf" download><button type="button">View Resume</button></a></td>
+           </tr>
     </table>
 	  <h1 ><i>Career Objectives:</i></h1>
 	  <div fontsize="10">
